# dagster_jaffleshop

./: .env.local  .gitignore  AGENTS.md  README.md  catalog.json  dagster_cloud.yaml  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  perf_info.json  profiles.yml  pyproject.toml  run_results.json
.github/workflows/: branch_deployments.yml  deploy.yml
compiled/jaffle_shop/models/: customers.sql  orders.sql
compiled/jaffle_shop/models/schema.yml/: accepted_values_orders_1ce6ab157c285f7cd2ac656013faf758.sql  not_null_customers_customer_id.sql  not_null_orders_amount.sql  not_null_orders_bank_transfer_amount.sql  not_null_orders_coupon_amount.sql  not_null_orders_credit_card_amount.sql  not_null_orders_customer_id.sql  not_null_orders_gift_card_amount.sql  not_null_orders_order_id.sql  relationships_orders_customer_id__customer_id__ref_customers_.sql  unique_customers_customer_id.sql  unique_orders_order_id.sql
compiled/jaffle_shop/models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
compiled/jaffle_shop/models/staging/schema.yml/: accepted_values_stg_orders_4f514bf94b77b7ea437830eec4421c58.sql  accepted_values_stg_payments_c7909fb19b1f0177c2bf99c7912f06ef.sql  not_null_stg_customers_customer_id.sql  not_null_stg_orders_order_id.sql  not_null_stg_payments_payment_id.sql  unique_stg_customers_customer_id.sql  (+2 more)
dagster_jaffleshop/: pyproject.toml  setup.py
dbt/: README.md  dbt_project.yml  profiles.yml
src/dagster_jaffleshop/: assets.py  definitions.py  project.py  schedules.py
tests/: test_dagster_config.py
