[project]
name = "dagster_jaffleshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-core<1.11",
    "dbt-snowflake<1.11",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_jaffleshop.definitions"
code_location_name = "dagster_jaffleshop"



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dagster_jaffleshop = ["dbt-project/**"]

[tool.setuptools.packages.find]
where = ["src"]
